Refactor version handling and improve update check logic